--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,11 +1,14 @@
 .profile__description {
     margin: 0;
-
+    max-width: 336px;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     color: #ffffff;
+    text-align: left;
 }
 
 @media (max-width: 600px) {
