--- a/blocks/element/__caption/element__caption.css
+++ b/blocks/element/__caption/element__caption.css
@@ -1,9 +1,13 @@
-
 .element__caption {
-    width: 282px;
-    display: flex;
-    justify-content: space-between;
-    
-
-    
+    font-weight: 900;
+    font-size: 24px;
+    line-height: 29px;
+    color: #000000;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 0;
+    padding: 25px 0 31px 21px;
+    grid-row: 2;
+    align-self: center;
 }
