--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,4 +1,12 @@
 .element {
     margin: 0;
-    border-radius: 10px 10px 0px 0px;
+    width: 282px;
+    min-height: 361px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-sizing: border-box;
+
+    display: grid;
+    grid-template-columns: 1fr 44px;
+    grid-template-rows: 282px 1fr;
 }
