--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,21 @@
 .header {
     min-height: 74px;
     margin-top: 45px;
-    margin-bottom: 40px;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
+}
+
+@media (max-width: 900px) {
+    .header {
+        padding-left: 27px;
+    }
+    
 }
 
 @media (max-width: 600px) {
     .header {
+        min-height: 56px;
         margin-top: 28px;
         margin-bottom: 38px;
-        padding-left: 27px;
         padding-bottom: 30px;
     }
     
