--- a/blocks/popup/__button/_assignment/popup__button_assignment_save.css
+++ b/blocks/popup/__button/_assignment/popup__button_assignment_save.css
@@ -1,4 +1,4 @@
-.popup__button_save {
+.popup__button_assignment_save {
     width: 358px;
     height: 50px;
     border-radius: 2px;
@@ -9,17 +9,15 @@
     font-size: 18px;
     line-height: 22px;
     font-weight: 400;
-    margin-top: 18px;
 }
 
 @media (max-width: 600px) {
-    .popup__button_save {
+    .popup__button_assignment_save {
         width: 238px;
         height: 46px;
         font-size: 14px;
         line-height: 17px;
         margin-top: 15px;
-
     }
     
 }
