--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,12 +1,12 @@
 .popup__container {
     position: relative;
     width: 430px;
+    height: 330px;
     background-color: #ffffff;
     box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
     border-radius: 10px;
     padding: 34px 36px 37px 36px;
-
 }
 
 @media (max-width: 600px) {
