--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,21 +1,27 @@
 .profile__add-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0;
-    margin-left: 240px;
-
+    background-image: url(../../../images/add-button.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 22px 22px;
     border: 2px solid #ffffff;
     background-color: transparent;
-
     width: 150px;
     height: 50px;
+    margin: 0;
+    padding: 0;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 720px) {
     .profile__add-button {
         margin: 36px 19px;
         width: 282px;
-        
+        background-size: 16px 16px;
     }
+}
+
+.profile__add-button:hover {
+    color: #ffffff;
+    opacity: .6;
+    transition: color .5s linear;
+    cursor: pointer;
 }
