--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,13 +1,11 @@
 .profile__info {
-    display: grid;
-    grid-template-columns: 1fr 24px;
-    gap: 16px 18px;
+   margin-bottom: 0;
+   flex-grow: 1;
 }
 
 @media (max-width: 600px) {
     .profile__info {
-        grid-template-columns: 1fr 18px;
-        gap: 14px 10px;
+        margin-bottom: 34px;
     }
     
 }
