--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,18 +1,21 @@
 .profile__name {
-    margin: 0;
-    
+    margin: 0 18px 0 0;
+    max-width: 336px;
     font-weight: 500;
     font-size: 42px;
     line-height: 48px;
-
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
     color: #ffffff;
+    align-self: center;
 }
 
 @media (max-width: 600px) {
    .profile__name {
        font-size: 27px;
        line-height: 33px;
-       text-align: center;
- }   
+       margin-right: 10px;
+    }   
     
 }
