--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,15 +1,22 @@
 .profile {
-    margin-bottom: 51px;
+    max-width: 880px;
+    padding: 40px 0 51px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
+}
+
+@media (max-width: 900px) {
+    .profile {
+        padding-left: 27px;
+        padding-right: 27px;
+    }
+    
 }
 
 @media (max-width: 600px) {
     .profile {
         flex-direction: column;
-        justify-content: center;
         max-width: 282px;
         margin: 0 auto;
     }
