--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -11,8 +11,18 @@
     text-align: left;
 }
 
+@media (max-width: 900px) {
+    .profile__description {
+        font-size: 16px;
+        line-height: 20px;
+        max-width: 282px;
+    }
+    
+}
+
 @media (max-width: 600px) {
     .profile__description {
+        max-width: 282px;
         font-size: 14px;
         line-height: 17px;
         text-align: center;
