--- a/blocks/popup/__button/_assignment/popup__button_assignment_save.css
+++ b/blocks/popup/__button/_assignment/popup__button_assignment_save.css
@@ -11,6 +11,13 @@
     font-weight: 400;
 }
 
+.popup__button_assignment_save:hover {
+    color: #ffffff;
+    opacity: .6;
+    transition: color .5s linear;
+    cursor: pointer;
+}
+
 @media (max-width: 600px) {
     .popup__button_assignment_save {
         width: 238px;
