--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
     background-size: 22px 22px;
     border: 2px solid #ffffff;
     background-color: transparent;
-    width: 150px;
+    min-width: 150px;
     height: 50px;
     margin: 0;
     padding: 0;
@@ -13,7 +13,14 @@
 
 @media (max-width: 720px) {
     .profile__add-button {
-        margin: 36px 19px;
+        margin: 0px 10px;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .profile__add-button {
+        margin: 0px 19px;
         width: 282px;
         background-size: 16px 16px;
     }
