--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,6 +5,13 @@
     margin-right: 30px;
 }
 
+@media (max-width: 720px) {
+    .profile__avatar {
+        margin-right: 10px;
+    }
+    
+}
+
 @media (max-width: 600px) {
     .profile__avatar {
         margin-right: 0;
