--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-    width: 24px;
+    min-width: 24px;
     height: 24px;
     background-image: url(../../../images/profile-edit-button.svg);
     background-position: center;
@@ -13,9 +13,8 @@
 
 @media (max-width: 600px) {
     .profile__edit-button {
-       width: 18px;
+       min-width: 18px;
        height: 18px;
-       margin-top: 10px;
        background-size: 7.5px 7.5px;
     }
 }
