--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -11,11 +11,19 @@
     align-self: center;
 }
 
+@media (max-width: 720px) {
+    .profile__name {
+        font-size: 32px;
+        line-height: 38px;
+        margin-right: 10px;
+    }
+    
+}
+
 @media (max-width: 600px) {
    .profile__name {
        font-size: 27px;
        line-height: 33px;
-       margin-right: 10px;
     }   
     
 }
