--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -16,6 +16,8 @@
 
 @media (max-width: 600px) {
     .profile {
+        padding-top: 38px;
+        padding-bottom: 36px;
         flex-direction: column;
         max-width: 282px;
         margin: 0 auto;
