--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -6,7 +6,7 @@
     background-repeat: no-repeat;
     background-color: transparent;
     border: none;
-    margin: 31px 30px 30px 0;
+    margin: 0 20px 0 0;
     padding: 0;
 }
 
