--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -6,7 +6,7 @@
     border-radius: 10px;
     box-sizing: border-box;
 
-    display: grid;
-    grid-template-columns: 1fr 44px;
-    grid-template-rows: 282px 1fr;
+    display: flex;
+    flex-direction: column;
+    position: relative;    
 }
