--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,6 +4,8 @@
     grid-template-rows: repeat(2, 361px);
     gap: 20px 17px;
     margin: 0 auto;
+    padding: 0;
+    list-style-type: none;
 }
 
 @media (max-width: 900px) {
