--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,24 @@
 .popup__container {
     position: relative;
-    width: 430px;
+    max-width: 430px;
     min-height: 330px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #ffffff;
     box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
     border-radius: 10px;
     padding: 34px 36px 37px 36px;
+    margin: auto;
 }
 
 @media (max-width: 600px) {
     .popup__container {
-        width: 282px;
+        width: 100%;
         padding: 25px 22px;
+        margin: 0 19px;
     }
     
 }
