--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,12 @@
 .popup {
-    /* visibility: hidden; */
-    display: none;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s, opacity 0.7s ease;
     background-color: rgba(0, 0, 0, .5);
     position: fixed;
+    display: flex;
     justify-content: center;
     align-items: center;
     top: 0;
