--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,10 +1,9 @@
 .popup__container {
     position: relative;
     max-width: 430px;
-    min-height: 330px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     background-color: #ffffff;
     box-sizing: border-box;
