--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,21 +1,6 @@
 .profile__avatar {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin-right: 30px;
-}
-
-@media (max-width: 720px) {
-    .profile__avatar {
-        margin-right: 10px;
-    }
-    
-}
-
-@media (max-width: 600px) {
-    .profile__avatar {
-        margin-right: 0;
-        margin-bottom: 26px;
-    }
-    
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
